# wav2tidal

./: .gitignore  404.html  README.md  flake.nix  index.html  justfile  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  deploy-docs.yml
.specify/: feature.json
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
architecture/: index.html
configs/: dataset.yaml  ingest.yaml  train.yaml
docs/: architecture.md  guide.md  index.md  language.md  model.md  roadmap.md  sound-engine.md
grammar/: pattern_subset.lark
guide/: index.html
language/: index.html
model/: index.html
roadmap/: index.html
search/: search_index.json
site/: 404.html  index.html
site/architecture/: index.html
site/language/: index.html
site/model/: index.html
site/roadmap/: index.html
site/search/: search_index.json
site/sound-engine/: index.html
sound-engine/: index.html
specs/001-corpus-to-live-pipeline/: data-model.md  design-change-001-sound-first.md  design-change-002-parameter-scenes.md  plan.md  quickstart.md  research.md  spec.md  tasks.md  us3-live-loop-design.md
src/wav2tidal/: __init__.py  cli.py
tests/property/: test_dataset.py  test_generator.py  test_ingest_idempotent.py  test_render.py
tests/smoke/: smoke_audio.py  smoke_gpu.py
tests/unit/: test_cli_scaffold.py  test_config.py  test_descriptor.py  test_dirt_map.py  test_dsp_features.py  test_dsp_slicing.py  test_ensemble.py  test_features_change_aware.py  test_grammar_v2.py  test_key.py  (+14 more)
(+40 files in other folders)
