[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "wav2tidal"
version = "0.1.0"
description = "Learn musical style from WAV corpora and drive TidalCycles live"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

[project.scripts]
wav2tidal = "wav2tidal.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]

[tool.black]
line-length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
# smoke tests need GPU/audio hardware — excluded from the default run (constitution IV)
norecursedirs = ["tests/smoke"]
